--- a/git-1.html
+++ b/git-1.html
@@ -9,5 +9,10 @@
 <body>
     <h1>this is a heading</h1>
     <p>this is a paragraph</p>
+    <ul>
+        <li>one</li>
+        <li>two</li>
+        <li>three</li>
+    </ul>
 </body>
 </html>
